// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card form wrapper disables the save button if canSubmit is false 1`] = `
<div
  className="card--container"
  id="start-main-content"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <p
          className="ds-u-color--gray ds-u-margin-bottom--0"
        >
          Welcome Back
        </p>
        <h1
          className="ds-h1 ds-u-margin--0"
        >
          test
        </h1>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <hr
              className="ds-u-color--gray-lighter"
            />
            <div
              className="ds-u-display--flex ds-u-justify-content--end ds-u-margin-top--3"
            >
              <Button
                component="button"
                disabled={true}
                type="submit"
                variation="primary"
              >
                Save changes
              </Button>
              <a
                className="ds-c-button ds-c-button--transparent"
                href="/"
              >
                Cancel
              </a>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper does not render a cancel button if form is not cancelable 1`] = `
<div
  className="card--container"
  id="start-main-content"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <p
          className="ds-u-color--gray ds-u-margin-bottom--0"
        >
          Welcome Back
        </p>
        <h1
          className="ds-h1 ds-u-margin--0"
        >
          test
        </h1>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <hr
              className="ds-u-color--gray-lighter"
            />
            <div
              className="ds-u-display--flex ds-u-justify-content--end ds-u-margin-top--3"
            />
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper renders a success alert if message provided 1`] = `
<div
  className="card--container"
  id="start-main-content"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <Alert
          headingLevel="3"
          role="alert"
          variation="success"
        >
          oh yeah!
        </Alert>
        <p
          className="ds-u-color--gray ds-u-margin-bottom--0"
        >
          Welcome Back
        </p>
        <h1
          className="ds-h1 ds-u-margin--0"
        >
          test
        </h1>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <hr
              className="ds-u-color--gray-lighter"
            />
            <div
              className="ds-u-display--flex ds-u-justify-content--end ds-u-margin-top--3"
            >
              <a
                className="ds-c-button ds-c-button--transparent"
                href="/"
              >
                Cancel
              </a>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper renders an error alert if message provided 1`] = `
<div
  className="card--container"
  id="start-main-content"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <Alert
          headingLevel="3"
          role="alert"
          variation="error"
        >
          oh noes!
        </Alert>
        <p
          className="ds-u-color--gray ds-u-margin-bottom--0"
        >
          Welcome Back
        </p>
        <h1
          className="ds-h1 ds-u-margin--0"
        >
          test
        </h1>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <hr
              className="ds-u-color--gray-lighter"
            />
            <div
              className="ds-u-display--flex ds-u-justify-content--end ds-u-margin-top--3"
            >
              <a
                className="ds-c-button ds-c-button--transparent"
                href="/"
              >
                Cancel
              </a>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper renders with a save button if onSave prop is provided 1`] = `
<div
  className="card--container"
  id="start-main-content"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <p
          className="ds-u-color--gray ds-u-margin-bottom--0"
        >
          Welcome Back
        </p>
        <h1
          className="ds-h1 ds-u-margin--0"
        >
          test
        </h1>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <hr
              className="ds-u-color--gray-lighter"
            />
            <div
              className="ds-u-display--flex ds-u-justify-content--end ds-u-margin-top--3"
            >
              <Button
                component="button"
                disabled={false}
                type="submit"
                variation="primary"
              >
                Save changes
              </Button>
              <a
                className="ds-c-button ds-c-button--transparent"
                href="/"
              >
                Cancel
              </a>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper renders with the default id on the container if id prop is not set 1`] = `
<div
  className="card--container"
  id="start-main-content"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <p
          className="ds-u-color--gray ds-u-margin-bottom--0"
        >
          Welcome Back
        </p>
        <h1
          className="ds-h1 ds-u-margin--0"
        >
          test
        </h1>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <hr
              className="ds-u-color--gray-lighter"
            />
            <div
              className="ds-u-display--flex ds-u-justify-content--end ds-u-margin-top--3"
            >
              <a
                className="ds-c-button ds-c-button--transparent"
                href="/"
              >
                Cancel
              </a>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper renders with the provided id on the container if id prop is set 1`] = `
<div
  className="card--container"
  id="my custom id"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <p
          className="ds-u-color--gray ds-u-margin-bottom--0"
        >
          Welcome Back
        </p>
        <h1
          className="ds-h1 ds-u-margin--0"
        >
          test
        </h1>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <hr
              className="ds-u-color--gray-lighter"
            />
            <div
              className="ds-u-display--flex ds-u-justify-content--end ds-u-margin-top--3"
            >
              <a
                className="ds-c-button ds-c-button--transparent"
                href="/"
              >
                Cancel
              </a>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper renders without a save button if onSave prop is missing 1`] = `
<div
  className="card--container"
  id="start-main-content"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <p
          className="ds-u-color--gray ds-u-margin-bottom--0"
        >
          Welcome Back
        </p>
        <h1
          className="ds-h1 ds-u-margin--0"
        >
          test
        </h1>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <hr
              className="ds-u-color--gray-lighter"
            />
            <div
              className="ds-u-display--flex ds-u-justify-content--end ds-u-margin-top--3"
            >
              <a
                className="ds-c-button ds-c-button--transparent"
                href="/"
              >
                Cancel
              </a>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper renders without an id on the container if id prop is null 1`] = `
<div
  className="card--container"
  id={null}
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <p
          className="ds-u-color--gray ds-u-margin-bottom--0"
        >
          Welcome Back
        </p>
        <h1
          className="ds-h1 ds-u-margin--0"
        >
          test
        </h1>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <hr
              className="ds-u-color--gray-lighter"
            />
            <div
              className="ds-u-display--flex ds-u-justify-content--end ds-u-margin-top--3"
            >
              <a
                className="ds-c-button ds-c-button--transparent"
                href="/"
              >
                Cancel
              </a>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;
